--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/lock_100dp_78A75A_FILL0_wght400_GRAD0_opsz48.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Decentralised Intrusion Detection System : Secure, Immutable, Transparent.</title>
+    <title>SmartLock : Secure, Immutable, Transparent.</title>
   </head>
   <body>
     <div id="root"></div>
